# rich-blocks-claude

./: Cargo.toml  LICENSE  README.md  install.sh  settings.sample.json
.github/workflows/: release.yml
src/: install.rs  main.rs  no_python.rs  notify_unfocused.rs  sensitive_files.rs  settings.rs  validate_bash.rs
